[package]
name = "markdown_service_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
pulldown-cmark = "0.9.3"
yew = { git = "https://github.com/yewstack/yew/", features = ["ssr"] }